Use flex-grow instead of flex for the sticky footer to fix an issue where main-content never expands past 100vh on ie11

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -45,6 +45,6 @@ body {
     flex-direction: column;
 
     #main-content {
-        flex: 1;
+        flex-grow: 1;
     }
 }
